# random

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  pyproject.toml  readme.md  vectorXoshiroConfig.cmake.in
VectorXoroshiro/: splitMix64.h  vectorSplitMix64.h  vectorXoroshiroPlusPlus.h  xoroshiroPlusPlus.h
VectorXoshiro/: splitMix64.h  vectorSplitMix64.h  vectorXoshiroPlusPlus.h  xoshiroPlusPlus.h
cmake/: CompilerOptions.cmake  randomConfig.cmake.in
devel/: xoshiro_coeffs.py
include/random/: chacha.hpp  chacha_scalar.hpp  chacha_simd.hpp  macros.hpp  splitmix.hpp  xoshiro.hpp  xoshiro_scalar.hpp  xoshiro_simd.hpp
include/xoshiro/: splitMix64.hpp  vectorXoshiro.hpp  xoshiro.hpp
pyrandom/: __init__.py
pyrandom/benchmarks/: numpy_generators.py
pyrandom/examples/: basic.py  scipy_sparse.py  vector.py
python/: CMakeLists.txt  pyproject.toml  pyrandom.cpp  splitmix.cpp
python/examples/: splitmix64_numpy.py  splitmix64_scipy.py  vectorxoshiro_numpy.py  vectorxoshiro_scipy.py
python/pyrandom/: __init__.py
python/pyrandom/benchmarks/: numpy_generators.py
python/pyrandom/examples/: scipy_sparse.py  scipy_stats.py  simd.py  splitmix_numpy.py  splitmix_scipy.py  xoshiro_numpy.py  xoshiro_scipy.py  xoshirosimd_numpy.py  xoshirosimd_scipy.py
python/pyrandom/tests/: test_pyrandom.py
python/tests/: test_pyrandom.py
src/: generate_skip.cpp  xoshiro.cpp  xoshiro_simd.cpp  xoshiro_simd_dispatch.cpp
tests/: CMakeLists.txt  benchmarks.cpp  chacha20_ref_impl_wrapper.c  chacha20_ref_impl_wrapper.h  split_mix_tests.cpp  splitmix_tests.cpp  testVectorSplitMix64.cpp  testVectorXoroshiroPlusPlus.cpp  testVectorXoshiroPlusPlus.cpp  test_chacha.cpp  test_chacha_simd.cpp  test_vector_xoshiro.cpp  test_xoroshiro.cpp  test_xoshiro.cpp  test_xoshiro_simd.cpp
tests/reference/: splitmix64.c  xoshiro256plusplus.c
xoshiro/: vectorXoshiro.h  vectorXoshiro.hpp  xoshiro.hpp
