[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "pyrandom"
version = "0.1.0"
description = "Python bindings for random generation using vectorXoshiro"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = "MIT"
readme = "readme.md"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
cmake.targets = ["pyrandom"]
cmake.define = {"ENABLE_PYTHON" = "ON"}
wheel.py-api = "cp312"
